--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="py-2 text-center text-large">bluetooth web demo</div>
+  <button id="request" class="mx-auto px-1 py-2 text-blue my-2">request bluetooth</button>
   <script src="js/main.js"></script>
 </body>
 </html>
