feat: add baidu statistics

--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
         align-items: center;
       }
     </style>
+    <script>
+      var _hmt = _hmt || [];
+      (function () {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?d15b76c3777f203324ac4065e2d7777c";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
   </head>
   <body>
     <div class="py-2 text-center text-large">bluetooth web demo</div>
-    <div class="buttons flex column ">
+    <div class="buttons flex column">
       <button id="request" class="mx-auto px-1 py-2 text-blue my-2">
         request bluetooth
       </button>
